--- a/knyga.tex
+++ b/knyga.tex
@@ -14,7 +14,7 @@
 \include{skteorijaC}
 \include{algebraC}
 \include{kombinatorikaC}
-%\include{geometrijaC}
+\include{geometrijaC}
 \include{sprendimaiC} 
 \include{literatura}
 \backmatter
