--- a/kn.tex
+++ b/kn.tex
@@ -2,7 +2,7 @@
 \usepackage[BW]{optional}
 \usepackage{knyga}
 \begin{document}
-\include{skyreliopavadinimas}
+\include{geometrija}
 \end{document}
 
 
