--- a/kombinatorika.tex
+++ b/kombinatorika.tex
@@ -20,7 +20,7 @@ garantuoti, kad žaidėjas ėjimą padaryti visuomet galės.
 \begin{pavnr}
   Ant stalo yra $n$ akmenukų. Žaidėjas gali nuimti bet kokį akmenukų skaičių
   ne didesnį už $k$. Žaidėjai $A$ ir $B$ ėjimus atlieka pakaitomis, pradeda $A$.
-  Laimi tas žaidėjas, kuris nuimą paskutinį akmenuką. Kuris žaidėjas laimėsi
+  Laimi tas žaidėjas, kuris nuimą paskutinį akmenuką. Kuris žaidėjas laimės
   su atitinkamais $n$?
 \end{pavnr}
 
