--- a/nelygybes.tex
+++ b/nelygybes.tex
@@ -1647,7 +1647,7 @@ yra didesnė už likusiosios ilgį.
 
 \begin{proof}[Pirmas įrodymas]
   Pažymekime $x=\sqrt{a+b-c}$, $y=\sqrt{b+c-a}$, z=$\sqrt{a+c-b}$, tuomet
-  $a^2+b^2+c^2=3$, o nelygybė pavirs į
+  $x^2+y^2+z^2=3$, o nelygybė pavirs į
   \begin{equation*}\frac{1}{x}+\frac{1}{y}+\frac{1}{z}\geq\frac{36}{(x^2+y^2+z^2)^2+x^2y^2+x^2z^2+y^2z^2}.
     \tag{Įsitikinkite!}
   \end{equation*} Kas yra ekvivalentu
